tests/baselines/reference/tsxSpreadChildren.errors.txt
tsxSpreadChildren.tsx(1,9): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.


==== tsxSpreadChildren.tsx (1 errors) ====
    declare module JSX {
            ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
    	interface Element { }
    	interface IntrinsicElements {
    		[s: string]: any;
    	}
    }
    declare var React: any;
    
    interface TodoProp {
        id: number;
        todo: string;
    }
    interface TodoListProps {
        todos: TodoProp[];
    }
    function Todo(prop: { key: number, todo: string }) {
        return <div>{prop.key.toString() + prop.todo}</div>;
    }
    function TodoList({ todos }: TodoListProps) {
        return <div>
            {...todos.map(todo => <Todo key={todo.id} todo={todo.todo}/>)}
        </div>;
    }
    let x: TodoListProps;
        <TodoList {...x}/>
    